- Bump to Java 19